--- a/src/components/UI/FindAutoForm/FindAutoForm.scss
+++ b/src/components/UI/FindAutoForm/FindAutoForm.scss
@@ -5,27 +5,21 @@
 .filterForm {
     background-color: #e6e6e6;
     padding: rem(20);
+    margin-top: rem(40);
     border-radius: rem(8);
     display: flex;
     flex-direction: column;
     gap: rem(20);
+    max-width: rem(967);
   
     &__tabs {
       display: flex;
-      gap: rem(10);
-  
-      .filterForm__tab {
-        background-color: black;
-        color: white;
-        border: none;
-        padding: rem(10) rem(20);
-        border-radius: rem(6);
-        cursor: pointer;
-  
-        &--active {
-          color: #DA7800; // оранжевый цвет для активной вкладки
-        }
-      }
+      
+    }
+
+    &__shortContainer {
+      display: flex;
+      column-gap: rem(5);
     }
   
     &__fields {
@@ -37,11 +31,18 @@
   
     &__input {
       padding: rem(12);
-      border-radius: rem(6);
+      border-radius: rem(5);
       border: none;
+      max-height: rem(50);
+      
       background-color: white;
-      font-size: rem(14);
       width: 100%;
+    }
+
+    &__select {
+      font-size: rem(16);
+      min-height: rem(50);
+      height: 100%;
     }
   
     &__submit {
@@ -53,6 +54,36 @@
       border-radius: rem(6);
       cursor: pointer;
       align-self: flex-start;
+    }
+
+    &__buttonContainer {
+      display: flex;
+      justify-content: left;
+    }
+
+    &__submitButton {
+      font-size: 16;
+    }
+
+    &__radioGroup {
+      .ant-radio-button-wrapper:hover {
+        color: #FF8C00;
+        border-color: none;
+      }
+
+      /* Оранжевая рамка активной кнопки */
+      .ant-radio-button-wrapper-checked {
+        color: #FF8C00 !important;
+        border: none !important;
+        outline: none;
+      }
+
+      /* Оранжевая рамка при фокусе (tab-клавиша и клик) */
+      .ant-radio-button-wrapper:focus-within {
+        border-color: #FF8C00;
+        outline: none;
+        
+      }
     }
   }
   
