--- a/src/pages/MainPage/MainContent.scss
+++ b/src/pages/MainPage/MainContent.scss
@@ -1,5 +1,10 @@
 @use '../../styles/helpers/' as *;
 
+main {
+    padding-inline: rem(55);
+}
+
+
 .mainPageCarsList {
     display: flex;
     column-gap: rem(65);
@@ -10,6 +15,7 @@
     list-style: none;
     margin: 0;
     padding-left: 0;
+    
 
     &__item {
         flex-shrink: 0;
