--- a/src/pages/MainPage/MainContent.scss
+++ b/src/pages/MainPage/MainContent.scss
@@ -2,13 +2,15 @@
 
 main {
     padding-inline: rem(55);
+    display: flex;
+    flex-direction: column;
+    row-gap: rem(50);
 }
 
 .title-container {
     display: flex;
     column-gap: rem(25);
     align-items: center;
-    margin-bottom: rem(30);
 
     &__title {
         font-weight: 600;
