--- a/src/components/UI/MainAutoCard/MainAutoCard.scss
+++ b/src/components/UI/MainAutoCard/MainAutoCard.scss
@@ -3,12 +3,21 @@
 .mainCard {
     display: flex;
     flex-direction: column;
-    max-width: rem(395);
-    
+    max-width: rem(395);    
+    transition: transform 0.2s ease !important;
     
     &__image-container {
         position: relative;
         width: 100%;
+    }
+
+    &__image {
+        border-top-left-radius: rem(5);
+        border-top-right-radius: rem(5);
+        object-fit: cover;
+        width: 100%;
+        height: rem(315);
+        
     }
 
     &__price {
