--- a/src/pages/MainPage/MainContent.scss
+++ b/src/pages/MainPage/MainContent.scss
@@ -7,38 +7,21 @@ main {
     row-gap: rem(50);
 }
 
-.title-container {
-    display: flex;
-    column-gap: rem(25);
-    align-items: center;
-
-    &__title {
-        font-weight: 600;
-        font-size: rem(32);
-    }
-
-    &__location {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        column-gap: rem(5);
-    }
-}
-
 
 .mainPageCarsList {
     display: flex;
-    column-gap: rem(65);
-    overflow-x: auto;
+    justify-content: space-between;
     padding-bottom: rem(10);
     max-width: 100%; 
-    scroll-behavior: smooth; 
     list-style: none;
     margin: 0;
     padding-left: 0;
-    
 
     &__item {
         flex-shrink: 0;
+        transition-duration: var(--transition-duration);
     }
+
 }
+
+
