AdPage update: author dynamic info

--- a/src/pages/AdPage/AdPage.scss
+++ b/src/pages/AdPage/AdPage.scss
@@ -94,6 +94,10 @@ main {
     &__descr {
         display: flex;
         justify-content: space-between;
+
+        &-title {
+            margin-bottom: rem(10);
+        }
         
     }
 
