--- a/src/pages/AdPage/AdPage.scss
+++ b/src/pages/AdPage/AdPage.scss
@@ -103,6 +103,8 @@ main {
 
     &__complain {
         display: flex;
+        border: none;
+        box-shadow: none;
         align-items: center;
         color: #FF2A2A;
         gap: rem(10);
