--- a/src/components/UI/AutoCard/AutoCard.scss
+++ b/src/components/UI/AutoCard/AutoCard.scss
@@ -11,6 +11,7 @@
     }
 
     &__image {
+        object-fit: cover;
         border-radius: rem(5);
     }
 
@@ -46,6 +47,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        align-items: end;
     }
 
     &__author-containter {
