email verification text color changing

--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -35,6 +35,11 @@
         font-weight: 500;
     }
 
+    &__email {
+        font-size: 16px;
+        color: #58B1FF;
+    }
+
     &__status {
         font-weight: 500;
     }
