expection handling in adPage fixing

--- a/src/components/UI/WarningCard/WarningCard.module.scss
+++ b/src/components/UI/WarningCard/WarningCard.module.scss
@@ -3,6 +3,7 @@
 .warning {
     display: flex;
     justify-content: center;
+    padding-top: rem(50);
 
     &__container {
         padding: rem(15);
