--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,17 +2,61 @@
 
 .header {
     background-color: var(--color-dark);
-}
+    
+    & * {
+        z-index: 100;
+    }
 
-
-.navbar {    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
-    padding-block: rem(10);  
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        column-gap: 1rem;
+        align-items: center;  
+        padding-block: rem(10);  
+    }
 
     &__overlay {
         display: flex;
+        align-items: center;
+
+        @include mobile-above {
+            display: contents;
+        }
+
+         @include mobile {
+            position: fixed;
+            inset: 0;
+            display: flex;
+            row-gap: 3rem;
+            flex-direction: column;
+            justify-content: center;
+            padding: 1rem;
+            background-color: var(--color-dark);
+            transition-duration: var(--transition-duration);
+
+            &:not(.is-active) {
+                @include hide;
+
+                translate: 100%;
+
+            }
+        }
+    }
+
+    &__menu {
+        @include mobile {
+            overflow-y: auto;
+        }
+
+    }
+
+    &__menu-list {
+        display: flex;
+
+        @include mobile {
+            flex-direction: column;
+            row-gap: 1rem;
+        }
     }
 }
 
@@ -28,4 +72,51 @@
         color: var(--color-light);
     }
     
+}
+
+.burger-button {
+    @include square(rem(34));
+
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: rem(8.5) rem(4.25);
+    color: var(--color-light);
+    background-color: transparent;
+    border: none;
+
+    @include hover {
+        color: var(--color-accent);
+    }
+
+    &.is-active {
+        .burger-button__line {
+            &:first-child {
+                rotate: 45deg;
+                transform-origin: 0;
+                translate: 0.25em -0.1em;
+            }
+
+            &:nth-child(2) {
+                rotate: -45deg;
+            }
+
+            &:last-child {
+                width: 0;
+            }
+        }
+    }
+
+    &__line {
+        width: 100%;
+        height: rem(2);
+        background-color: currentColor;
+        border-radius: 1rem;
+        transition-duration: var(--transition-duration);
+
+        &:last-child {
+            width: 55%;
+            align-self: end;
+        }
+    }
 }
