--- a/src/pages/MainPage/MainContent.scss
+++ b/src/pages/MainPage/MainContent.scss
@@ -13,6 +13,7 @@ main {
     justify-content: space-between;
     padding-bottom: rem(10);
     max-width: 100%; 
+    column-gap: 1rem;
     list-style: none;
     margin: 0;
     padding-left: 0;
