--- a/src/pages/MainPage/MainContent.scss
+++ b/src/pages/MainPage/MainContent.scss
@@ -7,7 +7,6 @@ main {
     row-gap: rem(50);
 }
 
-
 .mainPageCarsList {
     display: flex;
     justify-content: space-between;
@@ -27,6 +26,23 @@ main {
         z-index: 50;
     }
 
+
 }
 
+@media (width < rem(1200)) {
+    .mainPageCarsList {
+        justify-content: space-evenly;
+        padding-bottom: rem(10);
+        max-width: 100%; 
+        column-gap: 1rem;
+        list-style: none;
+        margin: 0;
+        padding-left: 0;
+    }
+
+    .main {
+        padding-inline: rem(10);
+        padding-block: rem(20);
+    }
+}
 
