--- a/src/components/UI/PageTitle/PageTitle.scss
+++ b/src/components/UI/PageTitle/PageTitle.scss
@@ -8,6 +8,10 @@
     &__title {
         font-weight: 600;
         font-size: rem(32);
+
+        @include mobile {
+            font-size: rem(24);
+        }
     }
 
     &__location {
@@ -15,5 +19,9 @@
         justify-content: center;
         align-items: center;
         column-gap: rem(5);
+        
+        @include mobile {
+            font-size: rem(14);
+        }
     }
 }
